# HOSPITAL_SYSTEM_OOP

./: CMakeLists.txt  Hospital.cpp  Hospital.h  Osoba.cpp  README.md  Soba.h  main.cpp
HOSPITAL_MANAGEMENT_OOP/: Account.cpp  Account.h  Apoteka.cpp  Apoteka.h  CMakeLists.txt  Child_Specialist.cpp  Child_Specialist.h  Doctor.cpp  Doctor.h  DoctorsSupport.cpp  DoctorsSupport.h  Feedback.cpp  Feedback.h  Gynecologist.cpp  Gynecologist.h  Hospital Management System.cpp  Hospital.cpp  Hospital.h  Login.cpp  Login.h  Medicine.cpp  Medicine.h  Osoba.h  Osoblje.cpp  Osoblje.h  Patient.cpp  Patient.h  Person.cpp  Person.h  Pharmacy.cpp  Pharmacy.h  Receptionist.cpp  Receptionist.h  Room.cpp  Room.h  Snacks.cpp  Snacks.h  Soba.cpp  Staff.cpp  Staff.h  (+5 more)
HOSPITAL_MANAGEMENT_OOP/Debug/: Hospital Management System.ilk  vc120.idb
HOSPITAL_MANAGEMENT_OOP/Debug/Hospital.4B85AA88.tlog/: CL.read.1.tlog  CL.write.1.tlog  Hospital Management System.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
