cmake_minimum_required(VERSION 3.23)
project(HOSPITAL_MANAGEMENT_OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(HOSPITAL_MANAGEMENT_OOP
        Account.cpp
        Account.h
        Child_Specialist.cpp
        Child_Specialist.h
        Doctor.cpp
        Doctor.h
        Gynecologist.cpp
        Gynecologist.h
        "Hospital Management System.cpp"
        Hospital.cpp
        Hospital.h
        Medicine.cpp
        Medicine.h
        Patient.cpp
        Patient.h
        Person.cpp
        Person.h
        Pharmacy.cpp
        Pharmacy.h
        Receptionist.cpp
        Receptionist.h
        Room.cpp
        Room.h
        Snacks.cpp
        Snacks.h
        Staff.cpp
        Staff.h
        Surgeon.cpp
        Surgeon.h
        Worker.cpp
        Worker.h
        DoctorsSupport.cpp
        DoctorsSupport.h
        Feedback.h
        Feedback.cpp
        )
